--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Test</title>
+    <title>YouTube Video</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>YouTube Url Of Video</h1>
-    <button id="webhookButton">Test RickRoll Gif</button>
+    <h1>UUU GUTT RICKROLL LMAO.. uh</h1>
+    <img id="rickrollGif" src="" alt="Loading GIF">
 </body>
 </html>
